Mon Sep 12 13:46:23 2016  Anton Davydov  <mail@davydovanton.com>

	* lib/uri/mailto.rb: Removed needless `return` and use `.`` instead of `::`
	  with class method.
	* test/uri/test_mailto.rb: Added tests for coverage.
	  [fix GH-1426][Misc #12750][ruby-core:77242]

Sun Sep 11 21:30:26 2016  Kazuhiro NISHIYAMA  <zn@mbf.nifty.com>

	* NEWS: News about Module.used_modules.

Sun Sep 11 19:06:49 2016  NAKAMURA Usaku  <usa@ruby-lang.org>

	* win32/win32.c (rb_w32_write_console): should set written length as the
	  return value.  [Bug #12748] [ruby-dev:49786]

Fri Sep  9 22:43:29 2016  Kazuhiro NISHIYAMA  <zn@mbf.nifty.com>

	* gems/bundled_gems: sort lines.

Fri Sep  9 17:59:46 2016  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* thread.c (rb_threadptr_raise): set cause from the called thread,
	  but not from the thread to be interrupted.
	  [ruby-core:77222] [Bug #12741]

Fri Sep  9 13:50:05 2016  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* doc/extension.rdoc, doc/extension.ja.rdoc: fix file name.
	  pointed out by @takkanm in the RubyKaigi talk.

Fri Sep  9 13:14:53 2016  Martin Duerst  <duerst@it.aoyama.ac.jp>

	* News: Announcing update to Unicode version 9.0.0 [ci skip]

Fri Sep  9 10:10:00 2016  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* variable.c (rb_const_search): warn with the actual class/module
	  name which defines the deprecated constant.

	* variable.c (rb_const_search): raise with the actual class/module
	  name which defines the private constant.

Thu Sep  8 17:47:18 2016  Kazuki Tsujimoto  <kazuki@callcc.net>

	* array.c (flatten): use rb_obj_class instead of rb_class_of
	  because rb_class_of may return a singleton class.
	  [ruby-dev:49781] [Bug #12738]

Thu Sep  8 17:40:15 2016  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* tool/rbinstall.rb (gem): use the bindir of each gemspec instead
	  of hardcoded 'bin', since rdoc 5.0.0 overrides it.

Thu Sep  8 16:47:03 2016  Shugo Maeda  <shugo@ruby-lang.org>
