@@ -1,3 +1,9 @@
+Tue Sep 13 00:39:47 2016  Aaron Patterson <tenderlove@ruby-lang.org>
+
+	* class.c (singleton_class_of): Copy superclass serial number to
+	  singleton class.  This improves singleton class IMC hit rates.
+	  [Feature #12364] [ruby-core:75425]
+
 Mon Sep 12 13:46:23 2016  Anton Davydov  <mail@davydovanton.com>
 
 	* lib/uri/mailto.rb: Removed needless `return` and use `.`` instead of `::`
